[package]
name = "websocket_test"
version = "0.1.0"
edition = "2021"

[dependencies]

# this works:
#rumqttc = { version = "0.23.0", features = [] }

# this doesn't work
rumqttc = { version = "0.23.0", features = ["websocket"] }

tokio = { version = "1.35.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }